src/app/home/header/header.component.css
form{
    text-align: center;
}
form > div{
    margin: .5em 1em;
}
.navbar-default{
    background:linear-gradient(to right, #00FF9B, #5f84fb);
    color: #fff;
    margin-bottom: 0px;
}
nav form .checkbox label{
    display: inline-block;
    position: relative;
    padding-left: 60px;
    color: rgba(255,255,255,.6);
}
nav form .checkbox label div {
    display: inline-block;
    width: 45px;
    height: 24px;
    position: absolute;
    top: -1px;
    left: 0px;
    border-radius: 1em;
    border: 2px solid rgba(255,255,255,.6);
    transition: background-color .3s;
}
nav form .checkbox label div::after{
    content: '';
    display: block;
    position: absolute;
    top: 2px;
    left: 3px;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    background-color: rgba(255,255,255,.6);
    transition: left .3sec;
}
nav form .checkbox label input:checked + div{
    border-color: #fff;
    background-color: rgb(0,200,0);

}
nav form .checkbox label input:checked ~ span{
    color: #fff;
}
nav form .checkbox label input:checked + div::after{
    left: calc( 100% - 21px );
    background-color: #fff;
}
nav form .checkbox label input{
    display: none;
}
.error{
    transition: opacity .5s ease-out;
    opacity: 0; 
    height: 0;
    overflow: hidden;
    position: absolute;
    top: 3.2em;
    right: 2em;
    background: rgba(0,0,0,.9);
    vertical-align: middle;
    padding: 1em;
    z-index: 5;
    color: red;
    font-weight: 700;
    font-size: 1.2em;
    border-radius: .5em;
}
.error p{
    margin: 0;
}
.error.show{
    opacity: 1;
    height: auto;
}

@media screen and (max-width:768px){
    form{
        display:flex;
        flex-direction:column;
        border: none !important;
    }
    form>div.checkbox {
        display:block;
        text-align:left;
        position:relative;
        margin-left: 50%;
        transform: translateX(-50%);
    }
}

